fixtures/cs-cmp-01/good/timing-safe-equal-crypto.ts
import crypto from "crypto";

export function safeCompare(a: string, b: string) {
	return crypto.timingSafeEqual(Buffer.from(a), Buffer.from(b));
}
